ENT-4589: Update OC SSO notification service to Spring Boot 3.0.7